# GenericParameters

./: .gitlab-ci.yml  CMakeLists.txt  Changelog.txt  README.md
CI/: ci-linux.sh  ci-windows.bat
GenericParameters/: BoolParameter.h  CMakeLists.txt  EnumParameter.h  ListParameter.h  NumericParameter.h  Parameter.h  ParameterObject.h  StructParameter.h  VectorParameter.h
Tests/: CMakeLists.txt  ParameterTest.cpp  TestParameterObject.cpp  TestParameterObject.h
